@@ -24,7 +24,6 @@ import java.util.Collections;
 import java.util.List;
 
 import org.junit.Test;
-
 public class DeepClonerTest {
 
 	@Test
